        by using scripts/l10n-changes script
      - When releasing the package, don't forget to run
        script/l10n-changes/output-l10n-changes and put its
        output here. Then put this note in the new UNRELEASED entry.

  * Anton Zinoviev
    - add dependency on archdetect.  New function in definitions.sh:
      default_disk_label.

 -- Joey Hess <joeyh@debian.org>  Thu,  4 Mar 2004 13:57:23 -0500

partman (13) unstable; urgency=low

  * Anton Zinoviev
    - parted_server.c: new functions named_is_changed, change_named and
      unchange_named.
    - parted_server.c: new function scan_device_name() and global
      variables dev, disk and device_name.  Use scan_device_name() in all
      command_*() functions.  Remove the macro SETUP_DEV_DISK.
    - parted_server.c: use change_named in command_*() functions that
      change the partition table and unchange_named in command_commit()
      and command_undo().
    - parted_server.c (command_commit): commit only if named_is_changed
      returns true.  Closes: #235372.
    - parted_server.c (command_new_label): free the variable device.
    - templates: add partman/progress/init/update_partitions.
    - definitiions.sh, parted_server.c: use third fifo file (stopfifo) in
      order not to rely on suppositions how libc works during
      synchronisation.
    - new file: init.d/dump.  It saves complete information about the
      partition tables in the log file of partman
    - don't show the menu storage_device.  Instead show a boolean question
      asking the users if they want to create a new, empty partition table
      on the selected disk.  Closes: #235365.
  * Joey Hess
    - Changed the menu item text again, removing the "(partman)".
    - Unfuzzy all translations.
    - Make ask_user use a default_choice file (insteas of last_choice).
    - Add a menudir_default_choice function which sets the default_choice of a
      menudir to the output of the given menu items's choices script.