@@ -10,6 +10,9 @@ partman (14) UNRELEASED; urgency=low
   * Anton Zinoviev
     - add dependency on archdetect.  New function in definitions.sh:
       default_disk_label.
+  * Joey Hess
+    - Change partman/text/finished_with_partition yet. again. Closes: #235968
+    - New cdebconf is in the archive, so re-enable the space escape code.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  4 Mar 2004 13:57:23 -0500
 
